# learn-twin-chain

./: .gitignore  App.debug.tsx  App.tsx  LICENSE  MIGRATION_GUIDE.md  README_MVP.md  SUBSCRIPTION_SETUP.md  VIDEO_PLATFORM_SETUP_GUIDE.md  constants.ts  generate_favicon.html  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  pyproject.toml  start_system.py  test_api.html  test_blockchain_mint.py  test_ipfs_twin.py  types.ts  vite.config.ts
.idx/: dev.nix
backend/: .gitignore  API_ENDPOINTS.md  API_ENDPOINTS_SUMMARY.md  DEPLOYMENT_GUIDE.md  README.md  README_DIGITAL_TWIN.md  SETUP.MD  app.py  blockchain_utils.py  check_env.py  complete_auth_diagnosis_fix.py  debug_search.py  debug_user_auth.py  deploy_and_test_zkp.py  deploy_contracts.py  deployment_addresses.json  docker-compose.yml  env.example  fix_users_address.py  hardhat.config.js  models.py  package-lock.json  package.json  pinata_ipfs_setup.md  quick_setup.py  requirements.txt  requirements311.txt  services.py  session_security_test.py  setup_env.py  setup_real_zkp.py  simple_mongodb_test.py  start_backend.py  temp_poseidon.js  test_blockchain_integration.py  test_deployment.py  test_did_update.py  test_enrollment_analysis.py  test_enrollment_fix.py  test_ipfs.py  (+5 more)
components/: AILearningCompanionComponent.tsx  AIRoadmapComponent.tsx  AchievementUnlockedPopup.tsx  AutoSlidingBanner.tsx  BlockchainStatus.tsx  CandidateCard.tsx  CompactBanner.tsx  CourseAccessGate.tsx  CourseCompletionPopup.tsx  DigitalTwinAnalysisComponent.tsx  DiscussionPanel.tsx  EmployerJobCard.tsx  Header.tsx  (+28 more)
(+344 files in other folders)
