[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-twin-chain"
version = "1.0.0"
description = "Digital Twin cho Giáo dục"
authors = [
    {name = "InSecLab"}
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["digital_twin"] 